# leadfinder-radar

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  m6e-features-finalize.yml
alembic/: env.py
alembic/versions/: 001_raw_posts_events.py  002_scores_llm_calls.py  003_leads_drafts_mutes.py  004_perf_indexes.py  005_draft_attempts.py  006_sends_halts.py  (+3 more)
app/: approval.py  bot.py  classify.py  draft.py  evals.py  filtering.py  guardrails.py  main.py  notify.py  packs.py  pipeline.py  prompt_tuner.py  review.py  sending.py  watch.py  worker.py
deploy/: leadfinder-mcp.service
docs/: FEATURES.md  M5.md  M6.md  M6A.md  M6B.md  M6C.md  M6D.md  M6_BUILD_EVIDENCE.md  M6_BUILD_PLAN.md  threads-app-review-submission.md
packs/: robofox_ai.yaml  robofox_web.yaml  zervvo_abroad.yaml
scripts/: append_m6_features.py  backup.sh  clear_halt.py  leads_tunnel.sh  mcp_smoke.py  poll_once.py  propose_prompt_tuning.py
tests/: conftest.py  test_approval.py  test_classify.py  test_claude_runner.py  test_dedup.py  test_draft.py  test_evals.py  test_filtering.py  test_guardrails.py  test_hn.py  test_hubspot.py  test_leads.py  test_mcp_approval_protocol.py  test_mcp_approvals.py  test_mcp_mutations.py  test_mcp_read.py  test_mcp_security.py  test_notify.py  test_packs.py  test_pipeline.py  test_prompt_tuner.py  test_reddit_oauth.py  test_reddit_rss.py  test_review.py  test_send_cycle.py  test_send_queue.py  test_senders.py  test_threads.py  test_threads_cse.py  test_watch.py
(+54 files in other folders)
